--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "redux-form": "^8.3.7",
     "redux-saga": "^1.1.3",
     "simplebar-react": "^2.3.6",
+    "socket.io-client": "^4.5.3",
     "toastr": "^2.1.4",
     "yup": "^0.32.11"
   },
@@ -118,7 +119,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
- 
   "eslintConfig": {
     "extends": [
       "eslint:recommended",
