--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "@ckeditor/ckeditor5-react": "^5.0.0",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@fullcalendar/bootstrap": "^5.11.0",
     "@fullcalendar/core": "^5.11.0",
     "@fullcalendar/daygrid": "^5.11.0",
     "@fullcalendar/interaction": "^5.11.0",
     "@fullcalendar/react": "^5.11.0",
     "@lourenci/react-kanban": "^2.1.0",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.10.6",
     "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "^5.10.9",
@@ -20,12 +25,14 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^14.1.0",
+    "@types/react": "^18.0.26",
     "@vtaits/react-color-picker": "^0.1.2",
     "apexcharts": "3.35.0",
     "axios": "^0.26.1",
     "axios-mock-adapter": "^1.20.0",
     "babel-eslint": "^10.1.0",
     "bootstrap": "^5.2.2",
+    "buffer": "^6.0.3",
     "chart.js": "^3.7.1",
     "chartist": "^0.11.4",
     "classnames": "^2.3.1",
@@ -37,6 +44,7 @@
     "firebase": "^9.6.10",
     "formik": "^2.2.9",
     "google-maps-react": "^2.0.6",
+    "i18n-iso-countries": "^7.5.0",
     "i18next": "^21.6.16",
     "i18next-browser-languagedetector": "^6.1.4",
     "leaflet": "^1.7.1",
@@ -51,6 +59,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.3.9",
     "react-auth-code-input": "^1.2.1",
+    "react-aws-s3": "^1.5.0",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-editable": "^0.8.2",
     "react-bootstrap-table-next": "^4.0.3",
@@ -70,6 +79,7 @@
     "react-facebook-login": "^4.1.1",
     "react-flatpickr": "^3.10.7",
     "react-google-login": "^5.2.2",
+    "react-hook-form": "^7.41.5",
     "react-horizontal-scrolling": "^0.1.13",
     "react-horizontal-scrolling-menu": "^3.2.0",
     "react-horizontal-timeline": "^1.5.3",
@@ -81,6 +91,7 @@
     "react-modal-video": "^1.2.7",
     "react-moment": "^1.1.2",
     "react-native-inline-datepicker": "^1.2.0",
+    "react-notifications": "^1.0.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-rangeslider": "^2.2.0",
     "react-rating": "^2.0.5",
@@ -88,6 +99,7 @@
     "react-redux": "^7.2.4",
     "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.2.0",
+    "react-s3": "^1.3.1",
     "react-script": "^2.0.5",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.7",
