--- a/package.json
+++ b/package.json
@@ -93,6 +93,8 @@
     "react-native-inline-datepicker": "^1.2.0",
     "react-notifications": "^1.0.0",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.2.16",
     "react-rangeslider": "^2.2.0",
     "react-rating": "^2.0.5",
     "react-rating-tooltip": "^1.2.0",
