--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios-mock-adapter": "^1.20.0",
     "babel-eslint": "^10.1.0",
     "bootstrap": "^5.2.2",
+    "bootstrap-switch-button-react": "^1.2.0",
     "buffer": "^6.0.3",
     "chart.js": "^3.7.1",
     "chartist": "^0.11.4",
@@ -79,6 +80,7 @@
     "react-dual-listbox": "^2.1.2",
     "react-facebook-login": "^4.1.1",
     "react-flatpickr": "^3.10.7",
+    "react-fullscreen-image": "^0.0.3",
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.41.5",
     "react-horizontal-scrolling": "^0.1.13",
