--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "react-input-mask": "^2.0.4",
     "react-jvectormap": "^0.0.16",
     "react-leaflet": "^2.7.0",
+    "react-lightgallery": "^0.9.0",
     "react-modal-video": "^1.2.7",
     "react-moment": "^1.1.2",
     "react-native-inline-datepicker": "^1.2.0",
