--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-apexcharts": "^1.3.9",
     "react-auth-code-input": "^1.2.1",
     "react-aws-s3": "^1.5.0",
+    "react-big-calendar": "^1.8.1",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-editable": "^0.8.2",
     "react-bootstrap-table-next": "^4.0.3",
@@ -78,6 +79,7 @@
     "react-drag-listview": "^0.1.8",
     "react-dropzone": "^11.3.2",
     "react-dual-listbox": "^2.1.2",
+    "react-event-calendar": "^0.3.0",
     "react-facebook-login": "^4.1.1",
     "react-flatpickr": "^3.10.7",
     "react-fullscreen-image": "^0.0.3",
