--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@fullcalendar/react": "^5.11.0",
     "@lourenci/react-kanban": "^2.1.0",
     "@material-ui/core": "^4.12.4",
+    
     "@mui/icons-material": "^5.10.6",
     "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "^5.10.9",
     "@mui/styles": "^5.10.9",
+    "@mui/x-date-pickers": "^6.14.0",
+    
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^14.1.0",
@@ -39,6 +42,7 @@
     "classnames": "^2.3.1",
     "cloudinary": "^1.33.0",
     "dateformat": "^5.0.3",
+    "dayjs": "^1.11.10",
     "draft-js": "^0.11.7",
     "echarts": "^4.9.0",
     "echarts-for-react": "^3.0.1",
